doc: fix comment color (increase darkness, it's very hard to read) + add align-right css for beein able to align image to right (with margin)

--- a/doc/sources/.static/default.css
+++ b/doc/sources/.static/default.css
@@ -474,6 +474,12 @@ ul.fakelist {
     margin-top: 0 !important;
 }
 
+img.align-right {
+	float: right;
+	margin-left: 10px;
+}
+
+
 /* "Footnotes" heading */
 p.rubric {
     margin-top: 30px;
